--- a/department-service.properties
+++ b/department-service.properties
@@ -5,3 +5,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #Eureka Server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka
+spring.boot.message="hello world"
