--- a/employee-service.properties
+++ b/employee-service.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 #Eureka Server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka
-spring.boot.message=emolyee service
+spring.boot.message=emolyee service updated
